--- a/report/sections/ch4-slipring.tex
+++ b/report/sections/ch4-slipring.tex
@@ -1,7 +1,7 @@
 \clearpage
 \section{Slipring}
 
-To allow the Lidar to continuously rotate and take measurements, a slip ring is needed to avoid issues with the cables breaking or getting tangled. which then results in damaging the equipment. 
+To allow the Lidar to continuously rotate and take measurements, a slip ring is needed to avoid issues with the cables breaking or getting tangled. This results in damage to the equipment. 
 The slip ring used for this build is a SNM022A-06\cite{slipring}, which is a 6-wire slipring that supports up to 210DC/240AC. 
 
 The slip ring allows the transfer of electrical signal from a stationary object to a rotating object. The center of the slip ring remains stationary as the surrounding housing rotates, in our case 6, conducting brushes along the centre core in separate lanes, which then transfers the electrical signal.
