--- a/report/sections/ch4-ultrasonic.tex
+++ b/report/sections/ch4-ultrasonic.tex
@@ -10,7 +10,7 @@ During the autonomous navigation the rover will be using 3 ultrasonic sensors fo
 \end{figure}
 
 
-To avoid damaging the Raspberry pi when using these ultrasonic sensors, a voltage divider is needed in order to protect the input pins on the Raspberry pi. The ultrasonic sensor operates at 5V, resulting in the output from the sensor being 5V. The GPIO ports on the Raspberry Pi operate at 3.3V, so the voltage divider is used to limit the voltage going into the input port from the ultrasonic sensor, while still providing a correct input-HIGH signal to the Raspberry Pi.
+To avoid damaging the Raspberry pi when using these ultrasonic sensors, a voltage divider is needed in order to protect its input pins. The ultrasonic sensor operates at 5V, resulting in the output from the sensor being 5V. The GPIO ports on the Raspberry Pi operate at 3.3V, so the voltage divider is used to limit the voltage going into the input port from the ultrasonic sensor, while still providing a correct input-HIGH signal to the Raspberry Pi.
 When the sensors are initially powered on they require a few milliseconds to initialize, before they can be used to take measurements. This is recommended in the datasheet.\cite{hcsr40datesheet}
 
 The HC-SR04 operates using 4 pins: Vcc, Trigger, Echo, Gnd.
@@ -31,7 +31,7 @@ The final pin labelled C is the common ground for the three voltage dividers.
 	\caption{The HC-SR04 timing chart\cite{hcsr04timingchart}}
 \end{figure}
 
-To retrieve a distance measurement, a 10us pulse is sent from the sensor using the trigger pin, the echo pin then receives a HIGH-pulse equivalent to how long it took to hear the echo. This means that length of this high-pulse is proportional to how far away the object is that distance is being measured between.\cite{ultrasonichowitworks}\\
+To retrieve a distance measurement, a 10\mu s pulse is sent from the sensor using the trigger pin, the echo pin then receives a HIGH-pulse equivalent to how long it took to hear the echo. This means that length of this high-pulse is proportional to how far away the object is that distance is being measured between.\cite{ultrasonichowitworks}\\
 
 
 \lstinputlisting[firstline=31, lastline=49, title=ultrasonic.py, language=Python]{../code/autonomous-rover/triple-ultrasonic-test.py}
