--- a/report/sections/ch4-configuring-up-mapping.tex
+++ b/report/sections/ch4-configuring-up-mapping.tex
@@ -4,7 +4,7 @@
 During the installation of ROS on Ubuntu a new package named Hector-slam was discovered.
 This package allows ROS to generate a map without the use of the GMapping package, which was one of the packages that caused issue during the installation process on Raspbian. Its biggest advantage is that it does not rely on odometry to know whether the reference frame has changed.
 
-\subsection{something}
+\subsection{How ROS works}
 During our development, we gained a deep understanding of how all the moving parts in ROS work together.
 
 %TODO: Talk about SSHing into ROS here - Anthony will do that.
