--- a/report/sections/ch4-ultrasonic.tex
+++ b/report/sections/ch4-ultrasonic.tex
@@ -31,7 +31,7 @@ The final pin labelled C is the common ground for the three voltage dividers.
 	\caption{The HC-SR04 timing chart\cite{hcsr04timingchart}}
 \end{figure}
 
-To retrieve a distance measurement, a 10\mu s pulse is sent from the sensor using the trigger pin, the echo pin then receives a HIGH-pulse equivalent to how long it took to hear the echo. This means that length of this high-pulse is proportional to how far away the object is that distance is being measured between.\cite{ultrasonichowitworks}\\
+To retrieve a distance measurement, a 10$\mu$ s pulse is sent from the sensor using the trigger pin, the echo pin then receives a HIGH-pulse equivalent to how long it took to hear the echo. This means that length of this high$-$pulse is proportional to how far away the object is that distance is being measured between.\cite{ultrasonichowitworks}\\
 
 
 \lstinputlisting[firstline=31, lastline=49, title=ultrasonic.py, language=Python]{../code/autonomous-rover/triple-ultrasonic-test.py}
