--- a/report/sections/ch4-description.tex
+++ b/report/sections/ch4-description.tex
@@ -1,11 +1,13 @@
 \section{Description}
 
-%TODO: Add some desciption to the figure below
+The figure below shows the modules we are planning to develop during the Development phase of our project. Three sensor modules will be developed to return readings to the controller running ROS, one navigation system which will be relying the ultrasonic sensory readings and a remote module for optionally controlling the rover by a remote. These modules may be prioritized accordingly to their importance and some of these modules might not be developed fully in the end.
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=.7]{images/developmentdiagram.pdf}
 	\caption{Diagram of modules we are developing}
 	\label{fig:developmentdiagram}
 \end{figure}
+%TODO: Remove 'on Raspbian' from the main node. Update
 
-The rover will consist of two main things: A Lidar recording distances and creating a map using SLAM and a close proximity detection and navigation system.
+The rover will consist of two main things: A LIDAR-Lite laser module, recording distances and creating a map using SLAM and a close proximity detection and navigation system.
